--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "components": "link:@/components",
     "framer-motion": "^12.16.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
