--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "css:check": "tailwindcss -i ./src/index.css -o /dev/null --minify"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "components": "link:@/components",
     "framer-motion": "^12.16.0",
     "prop-types": "^15.8.1",
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/cli": "^4.1.10",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/typography": "^0.5.16",
